cabal-version:       2.4
name:                webgear-benchmarks
version:             1.0.1
description:         Benchmarks for webgear
homepage:            https://github.com/haskell-webgear/webgear-benchmarks#readme
bug-reports:         https://github.com/haskell-webgear/webgear-benchmarks/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear-benchmarks

benchmark bench-users
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  build-depends:      aeson >=1.4 && <2.1
                    , base >=4.12.0.0 && <5
                    , bytestring >=0.10 && <0.12
                    , criterion ==1.5.*
                    , hashable >=1.2.7.0 && <1.5
                    , http-types ==0.12.*
                    , mtl ==2.2.*
                    , text ==1.2.*
                    , time >=1.8.0.2 && <1.14
                    , unordered-containers ==0.2.*
                    , servant >=0.16 && <0.19
                    , servant-server >=0.16 && <0.19
                    , scotty >=0.11.5 && <0.13
                    , wai ==3.2.*
                    , webgear-core ==1.0.1
                    , webgear-server ==1.0.1
  default-extensions: Arrows
                      DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingVia
                      FlexibleContexts
                      GeneralizedNewtypeDeriving
                      LambdaCase
                      OverloadedStrings
                      QuasiQuotes
                      RankNTypes
                      ScopedTypeVariables
                      TypeApplications
                      TypeOperators
  ghc-options:        -O2
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-fields
                      -Wmissing-home-modules
                      -Wmissing-deriving-strategies
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages
                      -Werror
                      -fshow-warning-groups
  main-is:            Main.hs
  other-modules:      Model
                    , WebGear
                    , Servant
                    , Scotty
  hs-source-dirs:     src/users